2007-07-17  Janus Weil  <jaydub66@gmail.com>

PR fortran/32535
	* resolve.c (resolve_fl_namelist): Check for namelist private
	components in contained subprograms.

2007-07-17  Janus Weil  <jaydub66@gmail.com>

	PR fortran/32535
	* gfortran.dg/pr32535.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126706 138bc75d-0d04-0410-961f-82ee72b054a4